--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.2.7",
     "fluent-ffmpeg": "^2.1.2",
+    "node-opus": "^0.3.3",
+    "opusscript": "0.0.8",
     "ytdl-core": "^4.0.6"
   },
   "devDependencies": {},
